2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/lib_proj.cmake: remove space from variable name to
	suppress policy warning. (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/bin_nad2bin.cmake: backward test for nad2nad warning.
	bad directory specified for emess (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* man/man1/proj.1 man/man1/cs2cs.1 man/man1/geod.1 man/man3/pj_init.3:
	fix various issues (#259)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* nad/Makefile.am: compatibility with proj-datumgrids-1.6RC1
	(patch by sebastic, #249)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* nad/Makefile.am: fix install target when no .lla files are in
	nad subdirectory.

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* cmake/Makefile.am man/Makefile.am: install missing CMake support
	files for dist-all target

2015-02-20 Howard Butler <howard@hobu.co>
	* CMakeLists.txt cmake/Proj4Mac.cmake 
	man/CMakeLists.txt src/bin_cs2cs.cmake 
	src/lib_proj.cmake: Adapt Charles Karney 
	CMake patches for smoother build #258

2015-02-20 Howard Butler <howard@hobu.co>
	* config.guess config.sub: #257 update very old config.guess
	and config.sub

2015-02-17 Howard Butler <howard@hobu.co>
	* src/PJ_aitoff.c: #250 Inverse solution for Winkel Tripel 
	from Drazan Tutic 

2015-02-17 Howard Butler <howard@hobu.co>
	* CMakeLists.txt cmake/policies.cmake src/lib_proj.cmake: #256 
	CMake tweaks to shut off some noisy policies, fix installation 
	of proj_config header, and shut off Framework building by 
	default on OSX

2015-02-17 Howard Butler <howard@hobu.co>
	* src/lib_proj.cmake CMakeLists: Fix #248 healpix compilation typo

2015-02-16 Howard Butler <howard@hobu.co>
	* src/pj_init.c: Fix #237 warning about initialization 
	ordering due to setlocale

2015-02-16 Howard Butler <howard@hobu.co>
	* nad/Makefile.am nad/Makefile.in and others in nad/: Fix #247 to 
	allow out-of-tree autoconf builds
